<resources>
    <string name="app_name">BlinVoi1.1</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in"> انشاء حساب جديد</string>
    <string name="action_sign_in_short">دخول</string>
    <string name="or">"أو"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">اسم المستخدم</string>
    <string name="password">كلمة المرو</string>
    <string name="email">البريد الالكتروني</string>
    <string name="signup">انشاء حساب جديد</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
